# sweetGrass

./: .git-commit-message  .gitignore  CHANGELOG.md  CLEANUP_COMPLETE.md  CODE_REVIEW_SUMMARY_JAN_9_2026.md  COMMIT_READY_DEC_26_2025.md  COMPREHENSIVE_AUDIT_JAN_9_2026.md  COMPREHENSIVE_AUDIT_REPORT_DEC_27_2025.md  COMPREHENSIVE_CODE_REVIEW_JAN_9_2026.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS_FINAL.md  DEPLOYMENT_READY.md  DEPLOY_GUIDE.md  DEPLOY_NOW.md  DEVELOPMENT.md  DOCS_COMPLETE_DEC_25_2025.md  DOCUMENTATION_CLEANUP_DEC_25_2025.md  DOCUMENTATION_INDEX.md  DOC_CLEANUP_SUMMARY.md  EVOLUTION_COMPLETE_FINAL_REPORT.md  EXECUTION_COMPLETE_JAN_9_2026.md  FINAL_SUMMARY_JAN_3_2026.md  FINAL_SUMMARY_JAN_9_2026_v2.md  HANDOFF_JAN_3_2026.md  HANDOFF_v0.6.0.md  HARDCODING_ELIMINATION_PLAN.md  IMPLEMENTATION_STATUS_JAN_9_2026.md  IMPROVEMENTS_IN_PROGRESS_JAN_9_2026.md  LATEST_EVOLUTION.md  LICENSE  MISSION_COMPLETE.md  NEXT_ACTIONS.md  NEXT_STEPS.md  PRODUCTION_CERTIFICATION.md  PROJECT_SUMMARY.md  QUICK_COMMANDS.md  (+26 more)
.cargo/: config.toml
crates/sweet-grass-compression/: Cargo.toml
crates/sweet-grass-compression/src/: analyzer.rs  engine.rs  error.rs  lib.rs  session.rs  strategy.rs
crates/sweet-grass-compression/src/engine/: mod.rs  tests.rs
crates/sweet-grass-compression/src/session/: mod.rs  tests.rs
crates/sweet-grass-core/: Cargo.toml
crates/sweet-grass-core/src/: activity.rs  agent.rs  braid.rs  config.rs  contribution.rs  dehydration.rs  entity.rs  error.rs  hash.rs  lib.rs  niche.rs  object_memory.rs  primal.rs  primal_info.rs  primal_names.rs  privacy.rs  scyborg.rs  transport.rs
crates/sweet-grass-core/src/activity/: mod.rs  tests.rs
crates/sweet-grass-core/src/braid/: braid_type.rs  builder.rs  context.rs  cross_gate.rs  mod.rs  tests.rs  types.rs
crates/sweet-grass-core/src/config/: capability.rs  mod.rs  subsystems.rs  tests.rs
crates/sweet-grass-core/src/entity/: mod.rs  tests.rs
crates/sweet-grass-core/src/privacy/: mod.rs  tests.rs
crates/sweet-grass-factory/: Cargo.toml
crates/sweet-grass-factory/proptest-regressions/: attribution.txt
crates/sweet-grass-factory/src/: attribution.rs  error.rs  factory.rs  lib.rs
crates/sweet-grass-factory/src/attribution/: chain.rs  mod.rs  tests.rs
crates/sweet-grass-factory/src/factory/: contribution.rs  mod.rs  tests.rs
crates/sweet-grass-integration/: Cargo.toml
crates/sweet-grass-integration/src/: anchor.rs  discovery.rs  error.rs  lib.rs  listener.rs  resilience.rs  testing.rs
crates/sweet-grass-integration/src/anchor/: mod.rs  tests.rs
crates/sweet-grass-integration/src/discovery/: cached.rs  capabilities.rs  mod.rs  registry.rs  tests.rs
crates/sweet-grass-integration/src/discovery/tests/: cached_discovery.rs  discovered_primal.rs  extract_capabilities.rs  local_discovery.rs  mod.rs  registry.rs  service_info.rs
crates/sweet-grass-integration/src/listener/: mod.rs  tarpc_client.rs  testing.rs  tests.rs
crates/sweet-grass-integration/src/resilience/: mod.rs  tests.rs
crates/sweet-grass-integration/src/signer/: discovery.rs  mod.rs  tarpc_client.rs  testing.rs  traits.rs
crates/sweet-grass-integration/tests/: e2e_simple.rs
crates/sweet-grass-query/: Cargo.toml
crates/sweet-grass-query/src/: engine.rs  error.rs  lib.rs  provo.rs  traversal.rs
crates/sweet-grass-query/src/engine/: mod.rs  tests.rs
crates/sweet-grass-query/src/provo/: mod.rs  tests.rs
crates/sweet-grass-query/src/traversal/: mod.rs  tests.rs
crates/sweet-grass-service/: Cargo.toml
crates/sweet-grass-service/benches/: core_operations.rs
crates/sweet-grass-service/examples/: demo.rs
crates/sweet-grass-service/src/: backend.rs  bootstrap.rs  cli.rs  crypto_delegate.rs  error.rs  exit.rs  factory.rs  handlers.rs  lib.rs  method_gate.rs  neural_announce.rs  peek.rs  router.rs  rpc.rs  server.rs  state.rs  streaming.rs  tcp_jsonrpc.rs  transport_connect.rs  uds.rs
crates/sweet-grass-service/src/btsp/: mod.rs  phase3.rs  protocol.rs  server.rs  transport.rs
crates/sweet-grass-service/src/factory/: mod.rs  tests.rs
crates/sweet-grass-service/src/handlers/: attribution.rs  braids.rs  compression.rs  health.rs  jsonrpc.rs  provenance.rs
crates/sweet-grass-service/src/handlers/braids/: mod.rs  tests.rs
crates/sweet-grass-service/src/handlers/health/: mod.rs  tests.rs
crates/sweet-grass-service/src/server/: mod.rs  tests.rs
crates/sweet-grass-service/src/tcp_jsonrpc/: tests.rs
crates/sweet-grass-service/src/uds/: lifecycle.rs  tests.rs
crates/sweet-grass-service/tests/: btsp_mock_beardog.rs  chaos.rs  cli_bin.rs  e2e_http.rs  fault_injection.rs  integration.rs
crates/sweet-grass-store/: Cargo.toml
crates/sweet-grass-store-nestgate/: Cargo.toml
crates/sweet-grass-store-nestgate/src/: client.rs  discovery.rs  error.rs  lib.rs  store.rs
crates/sweet-grass-store-nestgate/src/store/: tests.rs
crates/sweet-grass-store-postgres/: Cargo.toml
crates/sweet-grass-store-postgres/migrations/: 20250101000000_initial.sql
crates/sweet-grass-store-postgres/src/: error.rs  lib.rs  migrations.rs  store.rs
crates/sweet-grass-store-postgres/src/store/: mod.rs  row_mapping.rs  tests.rs
crates/sweet-grass-store-postgres/tests/: integration.rs  migrations_test.rs
crates/sweet-grass-store-postgres/tests/integration/: activities.rs  common.rs  concurrency.rs  crud.rs  mod.rs  queries.rs  schema.rs
crates/sweet-grass-store-redb/: Cargo.toml
crates/sweet-grass-store-redb/src/: error.rs  lib.rs
crates/sweet-grass-store-redb/src/store/: mod.rs  tests.rs
crates/sweet-grass-store-sled/: Cargo.toml
crates/sweet-grass-store-sled/src/: error.rs  lib.rs  store.rs
crates/sweet-grass-store-sled/src/store/: mod.rs  tests.rs
crates/sweet-grass-store/src/: error.rs  lib.rs  traits.rs
crates/sweet-grass-store/src/memory/: filter.rs  indexes.rs  mod.rs  tests.rs
crates/sweet-grass-store/src/traits/: mod.rs  tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_attribution.rs  fuzz_braid_deserialize.rs  fuzz_query_filter.rs
reports/: README.md  (+4 more)
(+245 files in other folders)
