# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "3"
members = [
    "crates/sweet-grass-core",
    "crates/sweet-grass-store",
    "crates/sweet-grass-store-postgres",
    "crates/sweet-grass-store-sled",
    "crates/sweet-grass-store-redb",
    "crates/sweet-grass-factory",
    "crates/sweet-grass-query",
    "crates/sweet-grass-compression",
    "crates/sweet-grass-service",
    "crates/sweet-grass-integration",
]

[workspace.package]
version = "0.7.27"
edition = "2024"
rust-version = "1.87"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoPrimals/sweetGrass"
authors = ["ecoPrimals Project"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Pure Rust RPC (no gRPC, no protobuf)
tarpc = { version = "0.37", features = ["full"] }
bincode = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"
base64 = "0.22"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Collections
indexmap = { version = "2.7", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }

# Synchronization (Pure Rust, no poisoning, better perf than std)
parking_lot = "0.12"

# Database (Pure Rust - no OpenSSL)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Embedded key-value store (Pure Rust - no C dependencies)
sled = "0.34"
redb = "2.4"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Object-safe async traits (native RPITIT is not dyn-compatible)
async-trait = "0.1"

# Property-based testing
proptest = "1.4"

# Testing utilities
tempfile = "3"
axum-test = "19"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic lints we enforce
too_many_arguments = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

# Production code quality — deny matches rhizoCrypt + loamSpine trio partners
unwrap_used = "deny"
expect_used = "deny"
clone_on_ref_ptr = "warn"

# Cast safety — align with loamSpine trio partner
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_lossless = "warn"

# Specific pedantic overrides
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Evolving toward full pedantic
missing_const_for_fn = "warn"
missing_errors_doc = "warn"

# ecoBin release-static: musl-static for plasmidBin distribution.
# Single codegen unit + fat LTO + strip = smallest binary + max inlining.
[profile.release-static]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
