[package]
name = "sweet-grass-compression"
description = "Attribution Layer - Compression engine (0/1/Many model)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
sweet-grass-core = { path = "../sweet-grass-core" }
sweet-grass-factory = { path = "../sweet-grass-factory" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

