# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "sweet-grass-core"
description = "Attribution Layer - Semantic Provenance & PROV-O"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["provenance", "prov-o", "attribution", "semantic-web", "braids"]
categories = ["data-structures", "cryptography"]

[features]
default = []
test = []

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = { workspace = true }
