[package]
name = "sweet-grass-factory"
description = "Attribution Layer - Braid creation factory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["provenance", "attribution", "braids", "factory", "prov-o"]
categories = ["data-structures"]

[lints]
workspace = true

[dependencies]
sweet-grass-core = { path = "../sweet-grass-core" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Async trait support
async-trait = "0.1"

[dev-dependencies]
sweet-grass-core = { path = "../sweet-grass-core", features = ["test"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = { workspace = true }

