# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "sweet-grass-integration"
description = "Attribution Layer - Capability-based integration with ecosystem primals"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["integration", "tarpc", "discovery", "capability", "ipc"]
categories = ["network-programming"]

[features]
default = []
# Enable test support utilities (mock clients, etc.).
# WARNING: This feature gates mock implementations. It MUST NOT be enabled
# in production builds. Mocks bypass real primal discovery and signing.
test = []

[lints]
workspace = true

[dependencies]
# Internal crates
sweet-grass-core = { path = "../sweet-grass-core" }
sweet-grass-compression = { path = "../sweet-grass-compression" }
sweet-grass-store = { path = "../sweet-grass-store" }

# Async runtime
tokio = { workspace = true }

# Pure Rust RPC (Primal Sovereignty - no gRPC/protobuf)
tarpc = { workspace = true }
bincode = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Required for dyn-compatible async traits (PrimalDiscovery, SigningClient, etc.).
async-trait = { workspace = true }

# Zero-copy byte buffers (wateringHole standards)
bytes = { workspace = true }

# Synchronization (Pure Rust, no poisoning)
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
sweet-grass-factory = { path = "../sweet-grass-factory" }
proptest = { workspace = true }

