# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "sweet-grass-service"
description = "Attribution Layer - Pure Rust tarpc + REST Service"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["service", "tarpc", "json-rpc", "provenance", "rest"]
categories = ["web-programming", "network-programming"]

[lints]
workspace = true

[dependencies]
# Internal crates
sweet-grass-core = { path = "../sweet-grass-core" }
sweet-grass-store = { path = "../sweet-grass-store" }
sweet-grass-store-postgres = { path = "../sweet-grass-store-postgres" }

sweet-grass-store-redb = { path = "../sweet-grass-store-redb" }
sweet-grass-store-nestgate = { path = "../sweet-grass-store-nestgate", optional = true }
sweet-grass-factory = { path = "../sweet-grass-factory" }
sweet-grass-query = { path = "../sweet-grass-query" }
sweet-grass-compression = { path = "../sweet-grass-compression" }
sweet-grass-integration = { path = "../sweet-grass-integration" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Pure Rust RPC (no gRPC, no protobuf)
tarpc = { workspace = true }
bincode = { workspace = true }


# Web framework (REST fallback)
axum = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Encoding
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# CLI
clap = { workspace = true }


[features]
default = []
nestgate = ["dep:sweet-grass-store-nestgate"]
test = []

[dev-dependencies]
sweet-grass-core = { path = "../sweet-grass-core", features = ["test"] }
sweet-grass-integration = { path = "../sweet-grass-integration", features = ["test"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
axum-test = { workspace = true }
tempfile = { workspace = true }
temp-env = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "core_operations"
harness = false

[[bin]]
name = "sweetgrass"
path = "src/bin/service.rs"

[[test]]
name = "fault_injection"
required-features = ["test"]

[[example]]
name = "demo"
path = "examples/demo.rs"
