# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "sweet-grass-store-nestgate"
description = "NestGate JSON-RPC storage backend for SweetGrass"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["storage", "nestgate", "json-rpc", "uds", "provenance"]
categories = ["database"]

[lints]
workspace = true

[dependencies]
sweet-grass-core = { path = "../sweet-grass-core" }
sweet-grass-store = { path = "../sweet-grass-store" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sweet-grass-factory = { path = "../sweet-grass-factory" }
