# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "sweet-grass-store-postgres"
description = "Attribution Layer - PostgreSQL persistent storage backend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["postgres", "storage", "provenance", "braids", "database"]
categories = ["database"]

[lints]
workspace = true

[dependencies]
# Internal crates
sweet-grass-core = { path = "../sweet-grass-core" }
sweet-grass-store = { path = "../sweet-grass-store" }

# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
# Required for dyn-compatible BraidStore impl (Arc<dyn BraidStore>).
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

[dev-dependencies]
sweet-grass-integration = { path = "../sweet-grass-integration", features = ["test"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[features]
default = []
integration-tests = []

