# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "sweet-grass-store-postgres"
description = "Attribution Layer - PostgreSQL persistent storage backend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["postgres", "storage", "provenance", "braids", "database"]
categories = ["database"]

[lints]
workspace = true

[dependencies]
# Internal crates
sweet-grass-core = { path = "../sweet-grass-core" }
sweet-grass-store = { path = "../sweet-grass-store" }

# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
# Required for dyn-compatible BraidStore impl (Arc<dyn BraidStore>).
async-trait = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
sweet-grass-integration = { path = "../sweet-grass-integration", features = ["test"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

[features]
default = []
integration-tests = []

