# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "sweet-grass-store-redb"
description = "Attribution Layer - redb embedded storage backend (Pure Rust, ecoBin compliant)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["redb", "storage", "provenance", "braids", "embedded"]
categories = ["database"]

[lints]
workspace = true

[dependencies]
sweet-grass-core = { path = "../sweet-grass-core" }
sweet-grass-store = { path = "../sweet-grass-store" }
redb = { workspace = true }
tokio = { workspace = true }
# Required for dyn-compatible BraidStore impl (Arc<dyn BraidStore>).
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
