# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "sweet-grass-store"
description = "Attribution Layer - Storage backends for Braids"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["storage", "provenance", "braids", "database", "query"]
categories = ["database", "data-structures"]

[lints]
workspace = true

[dependencies]
sweet-grass-core = { path = "../sweet-grass-core" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }

# Required for dyn-compatible async traits (BraidStore, IndexStore).
# Native RPITIT is not object-safe; async_trait boxes futures for dyn dispatch.
async-trait = "0.1"

# Synchronization (Pure Rust, no poisoning, better perf than std)
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
